added possibility to write a mail.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <a href="https://www.paypal.com/donate/?hosted_button_id=99LSJ52YNWABY" id="donate" class="donate-button">Jetzt spenden</a>
     </main>
     <footer>
+        <center>
+            <a href="mailto:KruemelDevelopment@web.de" id="footer-content">Schreiben Sie mir eine E-Mail</a>
+        </center>
     </footer>
     <script src="script.js"></script>
 </body>
