--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -26,4 +26,9 @@
     </main>
     <script src="script.js"></script>
 </body>
+<footer>
+    <center>
+        <a href="mailto:KruemelDevelopment@web.de" id="footer-content">E-Mail @ Kruemel Development</a>
+    </center>
+</footer>
 </html>
